<package>
  <name>robot_model</name>
  <version>1.11.5</version>
  <description>
    <tt>robot_model</tt> contains packages for modeling various
    aspects of robot information, specified in the Xml Robot
    Description Format (URDF). The core package of this stack
    is <a href="http://ros.org/wiki/urdf">urdf</a>, which parses URDF files, and constructs an
    object model (C++) of the robot.
  </description>

  <author email="isucan@gmail.com">Ioan Sucan</author>
  <maintainer email="isucan@gmail.com">Ioan Sucan</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/robot_model</url>
  <url type="repository">https://github.com/ros/robot_model</url>
  <url type="bugtracker">https://github.com/ros/robot_model/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>collada_parser</run_depend>
  <run_depend>collada_urdf</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>resource_retriever</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>urdf_parser_plugin</run_depend>
  <run_depend>joint_state_publisher</run_depend>

  <export>
    <metapackage/>
  </export>

</package>
