<package>
  <name>urdf</name>
  <version>1.9.17</version>
  <description>
    This package contains a C++ parser for the Unified Robot Description
    Format (URDF), which is an XML format for representing a robot model. 
    The code API of the parser has been through our review process and will remain
    backwards compatible in future releases.
  </description>
  <author>Ioan Sucan</author>
  <maintainer email="isucan@willowgarage.com">Ioan Sucan</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/urdf</url>


  <build_depend>catkin</build_depend>
  <build_depend>collada_parser</build_depend>
  <build_depend>rosconsole_bridge</build_depend> 
  <build_depend>roscpp</build_depend> 
  <build_depend>urdfdom</build_depend> 

  <run_depend>catkin</run_depend>
  <run_depend>collada_parser</run_depend>
  <run_depend>rosconsole_bridge</run_depend> 
  <run_depend>roscpp</run_depend> 
  <run_depend>urdfdom</run_depend> 



<!--
  <depend package="roscpp" />
  <depend package="collada_parser" />

  <rosdep name="rosconsole_bridge" /> 
  <rosdep name="urdfdom" /> 
-->
  <export>
  </export>

</package>


