<package>
  <name>urdf</name>
  <version>1.11.5</version>
  <description>
    This package contains a C++ parser for the Unified Robot Description
    Format (URDF), which is an XML format for representing a robot model. 
    The code API of the parser has been through our review process and will remain
    backwards compatible in future releases.
  </description>

  <author>Ioan Sucan</author>
  <maintainer email="isucan@gmail.com">Ioan Sucan</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/urdf</url>
  <url type="repository">https://github.com/ros/robot_model</url>
  <url type="bugtracker">https://github.com/ros/robot_model/issues</url>

  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

  <build_depend>liburdfdom-dev</build_depend>
  <build_depend>liburdfdom-headers-dev</build_depend>
  <build_depend>rosconsole_bridge</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>urdf_parser_plugin</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>rostest</build_depend>

  <run_depend>liburdfdom-dev</run_depend>
  <run_depend>liburdfdom-headers-dev</run_depend>
  <run_depend>rosconsole_bridge</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>urdf_parser_plugin</run_depend>
  <run_depend>pluginlib</run_depend>

</package>
