<package>
  <name>urdf_interface</name>
  <version>1.9.20</version>
  <description>
    This package is DEPRECATED. Please use the urdfdom dependency directly instead of this package.

    This package contains URDF C++ interface headers that define the
    user API to the C++ URDF model.
  </description>
  <author>Wim Meeussen</author>
  <author>John Hsu</author>
  <maintainer email="isucan@willowgarage.com">Ioan Sucan</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/urdf_interface</url>

  <build_depend>catkin</build_depend>
  <build_depend>urdfdom</build_depend>

  <run_depend>catkin</run_depend>
  <run_depend>urdfdom</run_depend>

  <!--rosdep name="urdfdom" /-->

  <export>
  </export>

</package>


