<package>
  <name>urdf_parser</name>
  <version>1.10.3</version>

  <description>
    This package is DEPRECATED. Please use the urdfdom dependency directly instead of this package.

    This package contains a C++ parser for the Unified Robot
    Description Format (URDF), which is an XML format for representing
    a robot model.  The parser reads a URDF XML robot description, and
    creates a C++ URDF model. Although it is possible to directly use
    this parser when working with URDF robot descriptions, the
    preferred user API is found in the urdf package.
  </description>
  <author>Wim Meeussen</author>
  <author>John Hsu</author>
  <author>Rosen Diankov</author>
  <maintainer email="isucan@willowgarage.com">Ioan Sucan</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/urdf_parser</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>urdfdom</build_depend>

  <run_depend>urdfdom</run_depend>

</package>
