<package>
  <name>urdf_parser_plugin</name>
  <version>1.11.8</version>
  <description>
    This package contains a C++ base class for URDF parsers.
  </description>

  <author email="isucan@gmail.com">Ioan Sucan</author>
  <maintainer email="isucan@gmail.com">Ioan Sucan</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/urdf</url>
  <url type="repository">https://github.com/ros/robot_model</url>
  <url type="bugtracker">https://github.com/ros/robot_model/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>liburdfdom-headers-dev</build_depend>
  <run_depend>liburdfdom-headers-dev</run_depend>

</package>
