<package>
  <name>urdf_parser_plugin</name>
  <version>1.12.7</version>
  <description>
    This package contains a C++ base class for URDF parsers.
  </description>

  <author email="isucan@gmail.com">Ioan Sucan</author>
  <author email="jacquelinekay1@gmail.com">Jackie Kay</author>
  <maintainer email="clalancette@osrfoundation.org">Chris Lalancette</maintainer>
  <maintainer email="sloretz@osrfoundation.org">Shane Loretz</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/urdf</url>
  <url type="repository">https://github.com/ros/robot_model</url>
  <url type="bugtracker">https://github.com/ros/robot_model/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>liburdfdom-headers-dev</build_depend>
  <run_depend>liburdfdom-headers-dev</run_depend>

</package>
